test(service): rewrite tests for common errors only